# python-timeout

./: .gitignore  Makefile  README.md  setup.cfg  tox.ini
.github/workflows/: release.yaml
docker/: Dockerfile.main  Dockerfile.piptools
tests/: requirements.txt  test_main.py
timeout/: __init__.py  __main__.py
timeout/lib/: exceptions.py
