[metadata]
name = python-timeout
author = Ryan Holt
author_email = ryanwholt@hotmail.com
summary = Contains the logic for handling a timeout.
description_file = README.md
description_content_type = text/x-rst; charset=UTF-8
home_page = https://github.com/Reyalsorik/python-timeout
project_urls =
    Documentation = https://github.com/Reyalsorik/python-timeout/README.md
    Source Code = https://github.com/Reyalsorik/python-timeout

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages = timeout

[options]
include_package_data = true
